# web_ocaml

./: .gitignore  README.md  dune-project  web_ocaml.opam
lib/: dune  lib.ml  root.ml
lib/gql/: db.ml  dune  gql.ml
lib/gql_schema/: dune  schema.ml  users.ml
src/: dune  main.ml
src/gql/: db.ml  dune  gql.ml  schema.ml  users.ml
src/gql/types/: users.ml
test/: dune
